Fix for excessively long words overflowing the reply modal, changed max voice-to-text message length to 400 characters

--- a/src/App.css
+++ b/src/App.css
@@ -226,6 +226,10 @@ Use: <Box className="devBox">...stuff here...</Box> */
   margin-bottom:0 !important;
 }
 
+.wrapReply {
+  overflow-wrap:break-word;
+}
+
 /* 
   const useStyles = makeStyles((theme) => ({
     paper: {
